deed = { path = "./deed" }
auction_house = { path = "./auction_house" }
escrow = { path = "./escrow" }

[workspace]
# include a member for each contract
members = [
  "deed",
  "auction_house",
  "escrow"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
