auction_house = { path = "./auction_house" }
deed = { path = "./deed" }
escrow = { path = "./escrow" }
transfer_owner = { path = "./transfer_owner" }

[workspace]
# include a member for each contract
members = [
  "auction_house",
  "deed",
  "escrow",
  "transfer_owner"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
